tests/fixtures/invalid/min_list_int.py
# Cannot call min() with List[int], Int
x = min([1, 2, 3], 1)
